<resources>
    <string name="dialog_app_contactless_not_available">NFC eklentimizi indirmeniz gerekiyor!</string>
    <string name="dialog_app_contactless_not_available_description">Müşterilerinizden temassız ödeme alabilmek için NFC eklentimizi uygulama mağazasından indirebilirsiniz.</string>
    <string name="yes_uppercase">EVET</string>
    <string name="no">HAYIR</string>

    <string name="sneaker_error">Hata</string>
    <string name="payment_method_direct">Doğrudan Tahsilat</string>
    <string name="payment_method_direct_description">Müşterilerinizin kart bilgilerini girerek tahsilat yapabilirsiniz.</string>
    <string name="payment_method_sms">SMS ilə Tahsilat</string>
    <string name="payment_method_sms_description">Müştərilərinizin cep telefonunu daxil edərək tahsilat edə bilərsiniz.</string>
    <string name="payment_method_qr">Karekod ilə Tahsilat</string>
    <string name="payment_method_qr_description">Müştərilərinizdən karekod ilə tahsilat edə bilərsiniz.</string>
    <string name="payment_method_email">E-Posta İle Tahsilat</string>
    <string name="payment_method_email_description">Müşterilerinizin e-posta adresini girerek tahsilat yapabilirsiniz.</string>
    <string name="payment_method_nfc">NFC ilə Tahsilat</string>
    <string name="payment_method_nfc_description">Müştərilərinizin NFC ilə cihazdan ödəniş etməsinə imkan verin.</string>
    <string name="to_continue">DEVAM</string>

    <string name="dialog_app_contactless_limit_reached">Temassız ödeme limitini aştınız.</string>
    <string name="dialog_app_contactless_limit_reached_description">Müşterilerinizden temassız ödeme alabilmek için işlem limitiniz 1500 TL\'dir.</string>

    <string name="payment_with_contactless_description">Bir sonraki adımda müşterinizin kartını cep telefonunuzun arkasına yaklaştırarak tahsilat yapabilirsiniz.</string>
    <string name="payment_with_contactless_warning">Tahsilat yapabilmeniz için müşterinizi kartınının temassız özelliğine sahip olması gereklidir.</string>
    <string name="payment_with_contactless_cancel_description">Tahsilatını iptal edeceğiniz müşterinin kartını cep telefonunuz NFC antenine yaklaştırınız. Tahsilat, yalnız kartın işlem gördüğü cihazda iptal edilebilir.</string>
    <string name="payment_time">İşlem Tarihi</string>
    <string name="payment_price">Tutar</string>
    <string name="payment_fixed_price">Net Tutar</string>
    <string name="payment_process_information">İŞLEM BİLGİSİ</string>
    <string name="payment_commission">Komisyon</string>
    <string name="payment_type">Tahsilat Yöntemi</string>
    <string name="payment_type_text">Doğrudan Tahsilat</string>
    <string name="payment_session">Tahsilat Oturumu</string>
    <string name="payment_method_toolbar_title">TAHSİLAT YÖNTEMİ</string>
    <string name="payment_contactless_toolbar_title">TEMASSIZ TAHSİLAT</string>
    <string name="input_price_toolbar_title">TUTAR GİRİNİZ</string>
    <string name="payment_with_sms_description">Tahsilat yapacağınız müşterinin telefon numarasını ilgili alana yazınız.</string>
    <string name="your_customer_phone_number">Müşterinizin Telefon Numarası</string>
    <string name="description_optional">Açıklama (Opsionel)</string>
    <string name="payment_with_sms_warning">Oluşturulan tahsilat SMS\'i sadece 24 saat süre ile aktif durumda kalacaktır.</string>
    <string name="message_phone_number_can_not_be_empty">Telefon numaranız boş olamaz.</string>
    <string name="message_fit_phone_number_digits">Telefon numarası 11 basamaklı olmalıdır.</string>
    <string name="payment_with_email_description">Müşterinizin E-posta Adresi</string>
    <string name="your_customer_email">Müşterinizin E-posta Adresi</string>
    <string name="payment_with_email_warning">Oluşturulan tahsilat linki sadece 24 saat süre ile aktif durumda kalacaktır.</string>
    <string name="message_email_can_not_be_empty">E-posta adresiniz boş olamaz.</string>
    <string name="message_email_not_valid">Girdiğiniz e-posta adresi geçersizdir.</string>
    <string name="payment_process_start">Ödeme Başlatılıyor</string>
    <string name="payment_status_description">Şu an sunucu ile bağlantı sağlanıyor.</string>
    <string name="payment_installment">Taksit Sayısı</string>
    <string name="payment_installment_text">Tek Çekim</string>
    <string name="payment_receipt_id">İşlem Numarası</string>
    <string name="payment_order_sent_to_customer_via_link">Müşterinizin e-posta adresine ödeme linki gönderilmiştir.</string>
    <string name="payment_order_sent_to_customer_via_sms">Müşterinizin telefon numarasına ödeme linki gönderilmiştir.</string>
    <string name="undefined">Tanımsız</string>
    <string name="payment_order_created">Ödeme Talebi Oluşturuldu</string>
    <string name="payment_order_not_created">Ödeme Talebi Oluşturulamadı</string>
    <string name="to_ok">TAMAM</string>
    <string name="message_payment_process_not_started_description">Sunucudan şu an ödeme bilgisi alınamıyor.</string>
    <string name="payment_price_uppercase">TUTAR</string>
    <string name="qr_code_description">Lütfen karekodu müşterinizin görebileceği şekilde tutunuz.</string>
    <string name="to_cancel">İPTAL ET</string>
    <string name="scan_card">Kartı Tara</string>
    <string name="or">VEYA</string>
    <string name="card_owner_name">Kart Sahibinin Adı ve Soyadı</string>
    <string name="card_number">Kart Numarası</string>
    <string name="card_expire_date_short">SKT</string>
    <string name="card_cvc">CVC</string>
    <string name="card_phone_number">Telefon Numarası</string>
    <string name="to_reject">REDDET</string>
    <string name="to_accept">ONAYLA</string>
    <string name="installement_amout_upper_case">TAKSİT SAYISI</string>
    <string name="dialog_payment_cancel">Ödeme İşlemi İptali</string>
    <string name="dialog_payment_cancel_description">Ödeme işleminiz iptal ediliyor. Emin misiniz?</string>
    <string name="message_payment_process_started">Ödeme İşlemi Başlatıldı</string>
    <string name="message_payment_process_started_3d_screen_description">Lütfen bekleyiniz, müşteriniz şu an 3D güvenlik ekranını açtı.</string>
    <string name="message_payment_process_not_started">Ödeme İşlemi Başlatılamadı</string>
</resources>