<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.machinarum.alneo_sdk.ui.method.qr.process.PaymentQRProcessVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.method.qr.process.PaymentQRProcessFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- status header -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:background="@drawable/background_b">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_20sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageview_status"
                        android:layout_width="@dimen/_96sdp"
                        android:layout_height="@dimen/_96sdp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_status_info" />

                    <TextView
                        android:id="@+id/textview_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:padding="@dimen/_4sdp"
                        android:text="@string/payment_process_start"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textview_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:text="@string/payment_status_description"
                        android:textColor="@color/gray_pale"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

            <!-- information container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/style_layout_background_f"
                android:orientation="vertical">

                <!-- header -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingTop="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:text="@string/payment_process_information"
                    android:textColor="@color/grey_blue" />

                <!-- payment information -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_20sdp">

                    <!-- payment price -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/_4sdp"
                        android:paddingBottom="@dimen/_4sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/payment_price"
                            android:textColor="@color/indigo_dark" />

                        <TextView
                            android:id="@+id/textview_payment_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:gravity="end"
                            android:text="@{viewModel.formattedPrice}"
                            android:textColor="@color/indigo_dark" />
                    </LinearLayout>

                    <!-- installment amount -->
                    <LinearLayout
                        android:id="@+id/linearlayout_installment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/_4sdp"
                        android:paddingBottom="@dimen/_4sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/payment_installment"
                            android:textColor="@color/indigo_dark" />

                        <TextView
                            android:id="@+id/textview_payment_installment"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:gravity="end"
                            android:text="@string/payment_installment_text"
                            android:textColor="@color/indigo_dark" />
                    </LinearLayout>

                    <!-- payment id -->
                    <LinearLayout
                        android:id="@+id/linearlayout_payment_receipt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/_4sdp"
                        android:paddingBottom="@dimen/_4sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/payment_receipt_id"
                            android:textColor="@color/indigo_dark" />

                        <TextView
                            android:id="@+id/textview_payment_receipt_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:gravity="end"
                            android:text="@{viewModel.receiptId}"
                            android:textColor="@color/indigo_dark" />
                    </LinearLayout>

                    <!-- payment type -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/_4sdp"
                        android:paddingBottom="@dimen/_4sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/payment_type"
                            android:textColor="@color/indigo_dark" />

                        <TextView
                            android:id="@+id/textview_payment_type"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:gravity="end"
                            android:text="@string/payment_method_qr"
                            android:textColor="@color/indigo_dark" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Primary.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/to_cancel"
            android:backgroundTint="@color/grey_blue"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextBtn"
            style="@style/Primary.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/to_ok"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent" />


        <com.machinarum.alneo_sdk.utils.view.LoadingLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>