<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.machinarum.alneo_sdk.ui.method.email.PaymentEmailVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.method.email.PaymentEmailFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_256sdp"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/nextBtn"
            app:layout_constraintTop_toTopOf="parent">

            <!-- card input container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_60sdp"
                android:background="@drawable/style_layout_background_f"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageview_status"
                    android:layout_width="@dimen/_96sdp"
                    android:layout_height="@dimen/_96sdp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_header_envelope" />

                <TextView
                    android:id="@+id/textview_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/payment_with_email_description"
                    android:textColor="@color/indigo_dark"
                    android:textSize="14sp" />

                <!-- email address -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_edittext_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="start"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="start"
                        android:text="@={viewModel.email}"
                        android:hint="@string/your_customer_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/indigo_dark"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- description  -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_edittext_description"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="start"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="start"
                        android:text="@={viewModel.description}"
                        android:hint="@string/description_optional"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences"
                        android:textColor="@color/indigo_dark"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- header -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_20sdp"
                    android:text="@string/payment_process_information"
                    android:textColor="@color/grey_blue" />

                <!-- payment information -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- payment price -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/_4sdp"
                        android:paddingBottom="@dimen/_4sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/payment_price"
                            android:textColor="@color/indigo_dark" />

                        <TextView
                            android:id="@+id/textview_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:gravity="end"
                            android:text="@{viewModel.formattedPrice}"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <!-- payment type -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/_4sdp"
                        android:paddingBottom="@dimen/_4sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/payment_type"
                            android:textColor="@color/indigo_dark" />

                        <TextView
                            android:id="@+id/textview_payment_type"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:gravity="end"
                            android:text="@string/payment_method_sms"
                            android:textColor="@color/black" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/payment_with_email_warning"
                    android:textColor="@color/indigo_dark"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextBtn"
            style="@style/Primary.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/to_continue"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>